umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@chalcogens_oh.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing-most-saturated {
    :output {:atoms ["O#n2#u" "H"] :bonds [[0 1 :single]]}
    :success true
    :tie-breaks []}
  :atom-typing-strict {
    :output {:atoms ["O#n2#u" "H"] :bonds [[0 1 :single]]}
    :success true
    :tie-breaks []}
  :counts-most-saturated {
    :output {:atoms ["O#n2#u" "H"] :bonds [[0 1 :single]]}
    :success true
    :tie-breaks []}
  :counts-strict {
    :output {:atoms ["O#n2#u" "H"] :bonds [[0 1 :single]]}
    :success true
    :tie-breaks []}}
